--- a/frontend/website/src/app/components/about-us/about-us.component.html
+++ b/frontend/website/src/app/components/about-us/about-us.component.html
@@ -3,8 +3,8 @@
 <div class="container">
 
   <div>
-    <img src={{imageList[4].url}} width="300"
-         height="375" alt="..." class="img-cover">
+    <img src={{imageList[4].url}} width="{{imageWidth}}"
+         height="{{imageHeight}}" alt="..." class="img-cover">
     <br><br><br><br>
     <p style="color: blue">
       Adam Chaplin (AKA Leonardo)
@@ -20,8 +20,8 @@
   </div>
 
   <div>
-    <img src={{imageList[5].url}} width="300"
-         height="375" alt="..." class="img-cover">
+    <img src={{imageList[5].url}} width="{{imageWidth}}"
+         height="{{imageHeight}}" alt="..." class="img-cover">
     <p style="color: orange">
       <br><br><br>
       Gil Gurkirat (AKA Michelangelo)
@@ -37,8 +37,8 @@
   </div>
 
   <div>
-    <img src={{imageList[6].url}} width="300"
-         height="375" alt="..." class="img-cover">
+    <img src={{imageList[6].url}} width="{{imageWidth}}"
+         height="{{imageHeight}}" alt="..." class="img-cover">
     <br><br><br><br>
     <p style="color: red">
       Niraj Patel (AKA Raphael)
@@ -54,8 +54,8 @@
   </div>
 
   <div>
-    <img src={{imageList[7].url}} width="300"
-         height="375" alt="..." class="img-cover">
+    <img src={{imageList[7].url}} width="{{imageWidth}}"
+         height="{{imageHeight}}" alt="..." class="img-cover">
     <br><br><br><br>
     <p style="color: purple">
       Uwem Ekong (AKA Donatello)
