--- a/frontend/website/src/app/components/faq/faq.component.html
+++ b/frontend/website/src/app/components/faq/faq.component.html
@@ -1,121 +1,152 @@
 <br><br>
-<h3>
-  1) Who are We?
-</h3>
-<p>
-  We are a startup corporation that provides personal surveillance systems.
-</p>
-<br>
+<div class="font-varies">
+  <p>
+    1) Who are we?
+  </p>
+  <p>
+    We are a startup corporation that provides personal surveillance systems.
+  </p>
+</div>
 
-<h3>
-  2) How much are our services?
-</h3>
-<p>
-  We have multiple service options starting at $9.99/Month/Camera. With each additional camera, there is a 5% discount
-  (Max 20%).
-</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    2) How much are our services?
+  </p>
+  <p>
+    We have multiple service options starting at $9.99/Month/Camera. With each additional camera, there is a 5% discount
+    (Max 20%).
+  </p>
+</div>
 
-<h3>
-  3) Do we ever offer promotions?
-</h3>
-<p>
-  We never offer promotions in order to prevent new customer from thinking they will lose out if they do not wait. Our
-  prices are fixed.
-</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    3) Do we ever offer promotions?
+  </p>
+  <p>
+    We never offer promotions in order to prevent new customer from thinking they will lose out if they do not wait. Our
+    prices are fixed.
+  </p>
+</div>
 
-<h3>
-  4) Where are our servers located?
-</h3>
-<p>
-  Our servers are located in Illinois, USA.
-</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    4) Where are our servers located?
+  </p>
+  <p>
+    Our servers are located in Illinois, USA.
+  </p>
+</div>
 
-<h3>
-  5) What is love?
-</h3>
-<p>
-  Baby don't hurt me, don't hurt me.
-</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    5) What is love?
+  </p>
+  <p>
+    Baby don't hurt me, don't hurt me.
+  </p>
+</div>
 
-<h3>
-  6) How many cameras can I use with your service?
-</h3>
-<p>
-  Our current limit is 10 cameras per account.
-</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    6) How many cameras can I use with your service?
+  </p>
+  <p>
+    Our current limit is 10 cameras per account.
+  </p>
+</div>
 
-<h3>
-  7) How do I create an account?
-</h3>
-<p>
-  You can create an account by clicking on the Sign-Up button on the top right.
-</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    7) How do I create an account?
+  </p>
+  <p>
+    You can create an account by clicking on the Sign-Up button on the top right.
+  </p>
+</div>
 
-<h3>
-  8) Can I change the quality of picture/video?
-</h3>
-<p>
-  Yes you can. We offer 360 px, 480 px, 720 px, and 1080 px.
-</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    8) Can I change the quality of picture/video?
+  </p>
+  <p>
+    Yes you can. We offer 360 px, 480 px, 720 px, and 1080 px.
+  </p>
+</div>
 
-<h3>
-  9) What is the maximum length of video I can record?
-</h3>
-<p>
-  You can record upto 30 seconds of video.
-</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    9) What is the maximum length of video I can record?
+  </p>
+  <p>
+    You can record upto 30 seconds of video.
+  </p>
+</div>
 
-<h3>
-  10) Can your service detect motion?
-</h3>
-<p>
-  Yes, we can detect motion upto a distance of 10 meters from the camera.
-</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    10) Can your service detect motion?
+  </p>
+  <p>
+    Yes, we can detect motion upto a distance of 10 meters from the camera.
+  </p>
+</div>
 
-<h3>
-  11) What guarantees do you offer?
-</h3>
-<p>
-  If you are not satisfied with our service, you can get a full refund within the first 30 days.
-</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    11) What guarantees do you offer?
+  </p>
+  <p>
+    If you are not satisfied with our service, you can get a full refund within the first 30 days.
+  </p>
+</div>
 
-<h3>
-  12) What does the fox say?
-</h3>
-<p>
-  Ring-ding-ding-ding-dingeringeding!</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    12) What does the fox say?
+  </p>
+  <p>
+    Ring-ding-ding-ding-dingeringeding!</p>
+</div>
 
-<h3>
-  13) Can we schedule recording?
-</h3>
-<p>
-  We are still working on that feature. We will update you soon!</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    13) Can we schedule recording?
+  </p>
+  <p>
+    We are still working on that feature. We will update you soon!</p>
+</div>
 
-<h3>
-  14) Will there be a mobile app?
-</h3>
-<p>
-  We are seriously considering this, but it is on the back-burner for now!</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    14) Will there be a mobile app?
+  </p>
+  <p>
+    We are seriously considering this, but it is on the back-burner for now!</p>
+</div>
 
-<h3>
-  15) How long do you store the images and videos for?
-</h3>
-<p>
-  Images are stored for 30 days and video are stored for 24 hours.</p>
-<br>
+<br><br>
+<div class="font-varies">
+  <p>
+    15) How long do you store the images and videos for?
+  </p>
+  <p>
+    Images are stored for 30 days and video are stored for 24 hours.</p>
+</div>
+
+
 
 <br><br><br><br><br>
 
@@ -123,18 +154,18 @@
   <form #feedbackData="ngForm" (ngSubmit)="create(feedbackData)" novalidate class="form">
     <div class="col">
       <div class="form-group">
-        <label class="form-label" for="name">Name</label>
+        <label class="form-label" class="font-varies" for="name">Name</label>
         <input class="form-control" style="width: 400px; margin: 0 auto" name="name" id="name" ngModel required
                #name="ngModel">
       </div>
       <div class="form-group">
-        <label class="form-label" for="email">E-Mail</label>
+        <label class="form-label" class="font-varies" for="email" >E-Mail</label>
         <input class="form-control" style="width: 400px; margin: 0 auto" name="email" id="email" ngModel required
                #email="ngModel">
       </div>
     </div>
     <div class="col">
-      <label class="form-label" for="question">Question</label>
+      <label class="form-label" class="font-varies" for="question" >Question</label>
     </div>
 
     <!--          <input class="form-control" style="width: 500px; margin: 0 auto; height: 300px" name="question" id="question" ngModel required #question="ngModel">-->
