--- a/frontend/website/src/app/components/preferences/preferences.component.html
+++ b/frontend/website/src/app/components/preferences/preferences.component.html
@@ -8,6 +8,7 @@
 <br><br><br>
 
 <div class="motion-preference">
+  <h3 class="clear-header">Toggle Motion Capture: </h3>
 
   <label *ngIf="this.preferencesServices.currentUserPrefences.motion == false" class="switch" (click)="toggleMotion(true)">
     <input type="checkbox">
