--- a/frontend/website/src/app/components/preferences/preferences.component.html
+++ b/frontend/website/src/app/components/preferences/preferences.component.html
@@ -40,3 +40,10 @@
     <span class="slider2 round"></span>
   </label>
 </div>
+
+<div class="motion-preference">
+  <h3 class="clear-header">Thing to Notify Me About: </h3>
+
+  <input id="labelsToNotifyFor" size="100" value="{{this.preferencesServices.currentUserPrefences.labels}}"/>
+  <button (click)="updateLabels()">Update</button>
+</div>
