my b for late commit

--- a/frontend/website/src/app/components/change-password/change-password.component.html
+++ b/frontend/website/src/app/components/change-password/change-password.component.html
@@ -1,11 +1,13 @@
-<div>
-        <p><b>Username: </b>{{this.authServ.loggedInUser.username}}</p>
-        <p><b>email: </b>{{this.authServ.loggedInUser.email}}</p>
-        <p><b>Reset Token: </b>{{this.authServ.loggedInUser.resetToken}}</p>
+<div id="info">
+  <p><b>Username: </b>{{this.authServ.loggedInUser.username}}</p>
+  <p><b>email: </b>{{this.authServ.loggedInUser.email}}</p>
+  <p><b>Reset Token: </b>{{this.authServ.loggedInUser.resetToken}}</p>
   <form #userData="ngForm" (ngSubmit)="changePassword(userData)" novalidate>
+    <label for="password" id="label">Enter a new valid password.  Passwords must contain 1 special character!</label>
     <div class="form-group">
-      <input (click)="clearPasswordPlaceholder()" class="form-control login-input" name="password" value="password" id="password" ngModel="{{passwordPlaceholder}}"><br>
+      <input (click)="clearPasswordPlaceholder()" class="form-control login-input" input type="password" name="password" value="password" id="password" ngModel="{{passwordPlaceholder}}"><br>
     </div>
     <button class="login-btn">Reset Password!</button>
   </form>
 </div>
+
