--- a/frontend/website/src/app/components/change-password/change-password.component.scss
+++ b/frontend/website/src/app/components/change-password/change-password.component.scss
@@ -100,3 +100,16 @@
 
 
 }
+
+form {
+  text-align: center;
+  font-weight: bold;
+}
+
+p {
+  padding-left: 2.5%;
+}
+
+.label {
+  text-align: center;
+}
