--- a/frontend/website/src/app/components/password-reset/password-reset.component.html
+++ b/frontend/website/src/app/components/password-reset/password-reset.component.html
@@ -1,8 +1,10 @@
 <div class="container-fliud login-cont">
   <form  #userData="ngForm" (ngSubmit)="reset(userData)" novalidate>
     <div class="form-group">
-      <input class="form-control login-input" name="email" id="email" ngModel=""><br>
+      <p><b>Enter a valid email to receive reset token!</b>
+        <input class="form-control login-input" name="email" id="email" ngModel=""><br>
     </div>
     <button class="login-btn">Send Reset Token!</button>
   </form>
 </div>
+
