--- a/frontend/website/src/app/components/preferences/preferences.component.html
+++ b/frontend/website/src/app/components/preferences/preferences.component.html
@@ -135,7 +135,7 @@
 
 
 <br><br>
-
+<div>
   <label *ngIf="this.preferencesServices.currentUserPrefences.motion == true" class="switch" (click)="toggleMotion(false)">
     <input type="checkbox">
     <span class="slider2 round"></span>
