--- a/frontend/website/src/app/components/home/home.component.html
+++ b/frontend/website/src/app/components/home/home.component.html
@@ -1,58 +1,61 @@
-<br><br>
-<h1 >Welcome to Big Brother <span>{{this.authService.loggedInUser.firstname}}</span>! Where your security is our
-  priority!</h1>
-<br><br>
-<div class="form-row align-items-end mb-2">
-  <img src={{imageList[0].url}} width="{{imageSize}}"
-       height="{{imageSize}}" alt="..." class="img-cover">
-  <img src={{imageList[1].url}}
-       width="{{imageSize}}" height="{{imageSize}}" alt="..." class="img-cover">
-  <img src={{imageList[2].url}} width="{{imageSize}}"
-       height="{{imageSize}}" alt="..." class="img-cover">
-  <img src={{imageList[3].url}} width="{{imageSize}}"
-       height="{{imageSize}}" alt="..." class="img-cover">
+<div class="home-cont">
+  <br><br>
+  <div class="typewriter typewriter-cont">
+  <h1 class="welcome-text">Welcome to Big Brother <span>{{this.authService.loggedInUser.firstname}}</span>! Where your security is our
+    priority!</h1>
+  </div>
+  <br><br>
+  <div class="form-row align-items-end mb-2 images-cont">
+    <img src={{imageList[0].url}} width="{{imageSize}}"
+         height="{{imageSize}}" alt="..." class="img-cover">
+    <img src={{imageList[1].url}}
+         width="{{imageSize}}" height="{{imageSize}}" alt="..." class="img-cover">
+    <img src={{imageList[2].url}} width="{{imageSize}}"
+         height="{{imageSize}}" alt="..." class="img-cover">
+    <img src={{imageList[3].url}} width="{{imageSize}}"
+         height="{{imageSize}}" alt="..." class="img-cover">
+  </div>
+  
+  <br><br><br><br>
+  
+  <h1 >Our Mission</h1>
+  
+  <p class="font-varies">
+    Our mission here is to bring you the latest in personal surveillance systems.
+  </p>
+  <p class="font-varies">
+    Our corporation is affiliated with over 100 personal security related companies and firms.
+  </p>
+  <p class="font-varies">
+    Our staff is dedicated to preserving your right to life, liberty, and pursuit of happiness!
+  </p>
+  
+  <br><br>
+  <hr>
+  <hr>
+  <br><br>
+  
+  <ul class="font-varies">
+    <a >
+      <mat-icon>location_on</mat-icon>
+      1234 Garage Rd, Basement City, IL 56789</a>
+    <br><br>
+  
+    <a >
+      <mat-icon>language</mat-icon>
+      https://www.big-bro.com</a>
+    <br><br>
+  
+    <a >
+      <mat-icon>email</mat-icon>
+      big-bro@yahoo.com</a>
+    <br><br>
+  
+    <a >
+      <mat-icon>smartphone</mat-icon>
+      (800) big-broo</a>
+    <br><br>
+  </ul>
+  
+  <br><br>  
 </div>
-
-<br><br><br><br>
-
-<h1 >Our Mission</h1>
-
-<p class="font-varies">
-  Our mission here is to bring you the latest in personal surveillance systems.
-</p>
-<p class="font-varies">
-  Our corporation is affiliated with over 100 personal security related companies and firms.
-</p>
-<p class="font-varies">
-  Our staff is dedicated to preserving your right to life, liberty, and pursuit of happiness!
-</p>
-
-<br><br>
-<hr>
-<hr>
-<br><br>
-
-<ul class="font-varies">
-  <a >
-    <mat-icon>location_on</mat-icon>
-    1234 Garage Rd, Basement City, IL 56789</a>
-  <br><br>
-
-  <a >
-    <mat-icon>language</mat-icon>
-    https://www.big-bro.com</a>
-  <br><br>
-
-  <a >
-    <mat-icon>email</mat-icon>
-    big-bro@yahoo.com</a>
-  <br><br>
-
-  <a >
-    <mat-icon>smartphone</mat-icon>
-    (800) big-broo</a>
-  <br><br>
-</ul>
-
-<br><br>
-
