--- a/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
@@ -3,7 +3,6 @@
   <span>
     Big Brother
   </span>
-  <button (click)="toggleDarkMode()">Dark / Light</button>
 
   <div class="spacer"></div>
 
@@ -23,7 +22,7 @@
     <a mat-button routerLink="home">Home</a>
     <a mat-button routerLink="faq">FAQ</a>
     <a mat-button routerLink="about-us">About Us</a>
-    <a mat-button routerLink="auth"><mat-icon>login</mat-icon> </a>
+    <a mat-button routerLink="auth">Login <mat-icon>login</mat-icon> </a>
   </div>
 
 </mat-toolbar>
