--- a/frontend/website/src/app/components/home/home.component.scss
+++ b/frontend/website/src/app/components/home/home.component.scss
@@ -41,3 +41,45 @@ img {
 .font-varies {
   font-size: 1em;
 }
+
+.home-cont{
+  width:100%;
+}
+
+.images-cont {
+  width:fit-content;
+  margin:auto;
+}
+
+.typewriter-cont  {
+  text-align:center;
+}
+
+.typewriter h1 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation:
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+  display:inline-block;
+  text-align:center;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
+
+.welcome-text {
+  text-align:center;
+}
