--- a/frontend/website/src/app/components/records/records.component.html
+++ b/frontend/website/src/app/components/records/records.component.html
@@ -13,81 +13,83 @@
     How would you like to filter your media?
   </div>
 
-  <div class="container2">
+<!--  <div class="container2">-->
 
-    <div>
-      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="mediaFilterationSetting(0)">Show
-        All
-      </button>
-    </div>
+<!--    <div>-->
+<!--      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="mediaFilterationSetting(0)">Show-->
+<!--        All-->
+<!--      </button>-->
+<!--    </div>-->
 
-    <div>
-      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="mediaFilterationSetting(1)">Show
-        None
-      </button>
-    </div>
+<!--    <div>-->
+<!--      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="mediaFilterationSetting(1)">Show-->
+<!--        None-->
+<!--      </button>-->
+<!--    </div>-->
 
-    <div>
-      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="mediaFilterationSetting(2)">Show
-        Favorites
-      </button>
-    </div>
+<!--    <div>-->
+<!--      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="mediaFilterationSetting(2)">Show-->
+<!--        Favorites-->
+<!--      </button>-->
+<!--    </div>-->
 
 
-    <div>
-      <p> Show by Month:</p>
-      <select [(ngModel)]="monthFilter">
-        <option value="1">January</option>
-        <option value="2">February</option>
-        <option value="3">March</option>
-        <option value="4">April</option>
-        <option value="5">May</option>
-        <option value="6">June</option>
-        <option value="7">July</option>
-        <option value="8">August</option>
-        <option value="9">September</option>
-        <option value="10">October</option>
-        <option value="11">November</option>
-        <option value="12">December</option>
-      </select>
-      <br>
-      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="filterByMonth(monthFilter)">Submit
-      </button>
-    </div>
-    <div>
+<!--    <div>-->
+<!--      <p> Show by Month:</p>-->
+<!--      <select [(ngModel)]="monthFilter">-->
+<!--        <option value="1">January</option>-->
+<!--        <option value="2">February</option>-->
+<!--        <option value="3">March</option>-->
+<!--        <option value="4">April</option>-->
+<!--        <option value="5">May</option>-->
+<!--        <option value="6">June</option>-->
+<!--        <option value="7">July</option>-->
+<!--        <option value="8">August</option>-->
+<!--        <option value="9">September</option>-->
+<!--        <option value="10">October</option>-->
+<!--        <option value="11">November</option>-->
+<!--        <option value="12">December</option>-->
+<!--      </select>-->
+<!--      <br>-->
+<!--      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="filterByMonth(monthFilter)">Submit-->
+<!--      </button>-->
+<!--    </div>-->
+<!--    <div>-->
 
-      <p> Show by Hour of Day:</p>
-      <select [(ngModel)]="timeFilter">
-        <option value="0">Midnight</option>
-        <option value="1">1 AM</option>
-        <option value="2">2 AM</option>
-        <option value="3">3 AM</option>
-        <option value="4">4 AM</option>
-        <option value="5">5 AM</option>
-        <option value="6">6 AM</option>
-        <option value="7">7 AM</option>
-        <option value="8">8 AM</option>
-        <option value="9">9 AM</option>
-        <option value="10">10 AM</option>
-        <option value="11">11 AM</option>
-        <option value="12">12 PM</option>
-        <option value="13">1 PM</option>
-        <option value="14">2 PM</option>
-        <option value="15">3 PM</option>
-        <option value="16">4 PM</option>
-        <option value="17">5 PM</option>
-        <option value="18">6 PM</option>
-        <option value="19">7 PM</option>
-        <option value="20">8 PM</option>
-        <option value="21">9 PM</option>
-        <option value="22">10 PM</option>
-        <option value="23">11 PM</option>
-      </select>
-      <br>
-      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="filterByTime(timeFilter)">Submit
-      </button>
-    </div>
-  </div>
+<!--      <p> Show by Hour of Day:</p>-->
+<!--      <select [(ngModel)]="timeFilter">-->
+<!--        <option value="0">Midnight</option>-->
+<!--        <option value="1">1 AM</option>-->
+<!--        <option value="2">2 AM</option>-->
+<!--        <option value="3">3 AM</option>-->
+<!--        <option value="4">4 AM</option>-->
+<!--        <option value="5">5 AM</option>-->
+<!--        <option value="6">6 AM</option>-->
+<!--        <option value="7">7 AM</option>-->
+<!--        <option value="8">8 AM</option>-->
+<!--        <option value="9">9 AM</option>-->
+<!--        <option value="10">10 AM</option>-->
+<!--        <option value="11">11 AM</option>-->
+<!--        <option value="12">12 PM</option>-->
+<!--        <option value="13">1 PM</option>-->
+<!--        <option value="14">2 PM</option>-->
+<!--        <option value="15">3 PM</option>-->
+<!--        <option value="16">4 PM</option>-->
+<!--        <option value="17">5 PM</option>-->
+<!--        <option value="18">6 PM</option>-->
+<!--        <option value="19">7 PM</option>-->
+<!--        <option value="20">8 PM</option>-->
+<!--        <option value="21">9 PM</option>-->
+<!--        <option value="22">10 PM</option>-->
+<!--        <option value="23">11 PM</option>-->
+<!--      </select>-->
+<!--      <br>-->
+<!--      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="filterByTime(timeFilter)">Submit-->
+<!--      </button>-->
+<!--    </div>-->
+<!--  </div>-->
+
+
   <br><br><br><br>
   <table class="fixed">
     <tbody>
