Updated styling a little bit

--- a/frontend/website/src/app/app.component.html
+++ b/frontend/website/src/app/app.component.html
@@ -1,5 +1,7 @@
+<div id="theme-container" [ngClass]="[setDark ? 'darkTheme' : '']">
 
   <app-navigation-bar (dark)="darkMode($event)"></app-navigation-bar>
 
   <router-outlet></router-outlet>
 
+</div>
