--- a/frontend/website/src/app/app.component.scss
+++ b/frontend/website/src/app/app.component.scss
@@ -1,1 +1,9 @@
+#theme-container{
+  width: 100%;
+  min-height: 100%;
+}
 
+#theme-container.darkTheme {
+  background-color: #181818;
+  color:white;
+}
