--- a/frontend/website/src/app/components/records/records.component.html
+++ b/frontend/website/src/app/components/records/records.component.html
@@ -1,37 +1,38 @@
-<div class="container">
-  <br>
-  <br>
-  <br>
+<br><br>
+<div class="typewriter">
+  <h1>Your Recorded Videos and Images</h1>
 
 
-  <div class="typewriter">
-    <h1>Your Recorded Videos and Images</h1>
+  <div>
 
 
-    <div>
-      <br><br>
-      How would you like to filter your media?
-      <br><br>
-      <p>
-        FROM DATE:
-      </p>
+    <div class="container">
+      <br>
+      <div>
+        <div>
+          <br><br>
+          How would you like to filter your media?
+          <br><br>
+          <p>
+            FROM DATE:
+          </p>
 
-      <form class="row row-cols-sm-auto">
-        <div class="col-12">
-          <div class="dp-hidden position-absolute">
-            <div class="input-group">
-              <input name="datepicker"
-                     class="form-control"
-                     ngbDatepicker
-                     #datepicker="ngbDatepicker"
-                     [autoClose]="'outside'"
-                     (dateSelect)="onDateSelection($event)"
-                     [displayMonths]="2"
-                     [dayTemplate]="t"
-                     outsideDays="hidden"
-                     [startDate]="fromDate!"
-                     tabindex="-1">
-              <ng-template #t let-date let-focused="focused">
+          <form class="row row-cols-sm-auto">
+            <div class="col-12">
+              <div class="dp-hidden position-absolute">
+                <div class="input-group">
+                  <input name="datepicker"
+                         class="form-control"
+                         ngbDatepicker
+                         #datepicker="ngbDatepicker"
+                         [autoClose]="'outside'"
+                         (dateSelect)="onDateSelection($event)"
+                         [displayMonths]="2"
+                         [dayTemplate]="t"
+                         outsideDays="hidden"
+                         [startDate]="fromDate!"
+                         tabindex="-1">
+                  <ng-template #t let-date let-focused="focused">
           <span class="custom-day"
                 [class.focused]="focused"
                 [class.range]="isRange(date)"
@@ -40,171 +41,173 @@
                 (mouseleave)="hoveredDate = null">
             {{ date.day }}
           </span>
-              </ng-template>
+                  </ng-template>
+                </div>
+              </div>
+
+              <div class="col-12">
+                <div class="input-group">
+                  <input #dpFromDate
+                         class="form-control" placeholder="yyyy-mm-dd"
+                         name="dpFromDate"
+                         [value]="formatter.format(fromDate)"
+                         (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
+                  <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()"
+                          type="button"></button>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-12">
+              <p>
+                TO DATE:
+              </p>
+              <div class="input-group">
+                <input #dpToDate
+                       class="form-control" placeholder="yyyy-mm-dd"
+                       name="dpToDate"
+                       [value]="formatter.format(toDate)"
+                       (input)="toDate = validateInput(toDate, dpToDate.value)">
+                <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
+              </div>
+            </div>
+          </form>
+
+
+          <br><br>
+          <div>
+            <p>
+              FROM TIME:
+            </p>
+            <ngb-timepicker [(ngModel)]="fromTime"></ngb-timepicker>
+          </div>
+
+          <div>
+            <p>
+              TO TIME:
+            </p>
+            <ngb-timepicker [(ngModel)]="toTime"></ngb-timepicker>
+          </div>
+
+
+          <br><br>
+
+
+          <div class="container">
+            <div class="_ul_checkbox">
+              <ul>
+                <li>
+                  <input [(ngModel)]="favorites" type="checkbox" name="favorites"/>Favorites Only
+                </li>
+                <li>
+                  <input [(ngModel)]="videos" type="checkbox" name="videos"/>Show Videos
+                </li>
+                <li>
+                  <input [(ngModel)]="images" type="checkbox" name="images"/>Show Images
+                </li>
+              </ul>
             </div>
           </div>
 
-          <div class="col-12">
-            <div class="input-group">
-              <input #dpFromDate
-                     class="form-control" placeholder="yyyy-mm-dd"
-                     name="dpFromDate"
-                     [value]="formatter.format(fromDate)"
-                     (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
-              <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
-            </div>
+          <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="startFilter()">Filter</button>
+
+          <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="resetFilter()">Reset</button>
+
+        </div>
+      </div>
+      <br>
+      <br>
+      <br>
+
+
+      <br><br><br><br>
+      <table class="fixed">
+        <tbody>
+        <col width="100px"/>
+        <col>
+        <col>
+        <tr *ngFor="let mxdto of listOfMediax; let i = index">
+          <div class="recordrow">
+
+
+            <td *ngIf="mxdto.isfavorite" style="margin:10px;">
+              <button mat-icon-button color="warn" (click)="updateFavorite(mxdto)">
+                <mat-icon>favorite</mat-icon>
+              </button>
+            </td>
+
+            <td *ngIf="!mxdto.isfavorite" style="margin:10px;">
+              <button mat-icon-button color="disabled" (click)="updateFavorite(mxdto)">
+                <mat-icon>favorite</mat-icon>
+              </button>
+            </td>
+
+            <td style="width:100em;">  {{mxdto.filename}}</td>
+
+
+            <td style="width:35em;">
+              <p>{{mxdto.timestamp}}</p>
+            </td>
+
+            <td style="width:35em;">
+              <p>{{mxdto.location}}</p>
+            </td>
+
+
+            <td>
+              <!-- <img id="img{{i}}" src="{{mxdto.url}}" height="200px;" style="visibility: hidden"/>
+                <button id="sh{{i}}" (click)="showhide(mxdto,i)">Show</button> -->
+              <button *ngIf="!mxdto.isvideo" class="btn btn-outline-primary"
+                      (click)="open(imagemodal, videomodal, mxdto)">
+                Show
+              </button>
+            </td>
+
+            <td>
+              <button class="btn btn-outline-primary" (click)="rename(mxdto)">Rename</button>
+            </td>
+
+
+            <td>
+              <a class="btn btn-outline-primary" href="{{mxdto.url}}" target="_blank" rel="noopener noreferrer"
+                 download="{{mxdto.url}}">Download</a>
+            </td>
+
+            <td>
+              <button class="btn btn-outline-danger" (click)="deleteMediax(mxdto)">Delete</button>
+            </td>
+
           </div>
+        </tr>
+        </tbody>
+      </table>
+
+
+      <ng-template #imagemodal let-modal>
+        <div class="modal-header">
+          <h4 class="modal-title" id="modal-basic-title">{{currentmx.filename}}</h4>
+          <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
         </div>
-
-
-        <div class="col-12">
-          <p>
-            TO DATE:
-          </p>
-          <div class="input-group">
-            <input #dpToDate
-                   class="form-control" placeholder="yyyy-mm-dd"
-                   name="dpToDate"
-                   [value]="formatter.format(toDate)"
-                   (input)="toDate = validateInput(toDate, dpToDate.value)">
-            <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
-          </div>
+        <div class="modal-body">
+          <img width="100%;" [src]="currentmx.url"/>
         </div>
-      </form>
-
-
-      <br><br>
-      <div>
-        <p>
-          FROM TIME:
-        </p>
-        <ngb-timepicker [(ngModel)]="fromTime"></ngb-timepicker>
-      </div>
-
-      <div>
-        <p>
-          TO TIME:
-        </p>
-        <ngb-timepicker [(ngModel)]="toTime"></ngb-timepicker>
-      </div>
-
-
-      <br><br>
-
-
-      <div class="container">
-        <div class="_ul_checkbox">
-          <ul>
-            <li>
-              <input [(ngModel)]="favorites" type="checkbox" name="favorites"/>Favorites Only
-            </li>
-            <li>
-              <input [(ngModel)]="videos" type="checkbox" name="videos"/>Show Videos
-            </li>
-            <li>
-              <input [(ngModel)]="images" type="checkbox" name="images"/>Show Images
-            </li>
-          </ul>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Alright</button>
         </div>
-      </div>
+      </ng-template>
 
-      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="startFilter()">Filter</button>
-
-      <button class="btn btn-sm btn-outline-primary display: inline-block;" (click)="resetFilter()">Reset</button>
+      <ng-template #videomodal let-modal>
+        <div class="modal-header">
+          <h4 class="modal-title" id="modal-basic-title">{{currentmx.filename}}</h4>
+          <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+        </div>
+        <div class="modal-body">
+          <embed [src]="safeUrl">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Alright</button>
+        </div>
+      </ng-template>
 
     </div>
-  </div>
-  <br>
-  <br>
-  <br>
-
-
-  <br><br><br><br>
-  <table class="fixed">
-    <tbody>
-    <col width="100px"/>
-    <col>
-    <col>
-    <tr *ngFor="let mxdto of listOfMediax; let i = index">
-      <div class="recordrow">
-
-
-        <td *ngIf="mxdto.isfavorite" style="margin:10px;">
-          <button mat-icon-button color="warn" (click)="updateFavorite(mxdto)">
-            <mat-icon>favorite</mat-icon>
-          </button>
-        </td>
-
-        <td *ngIf="!mxdto.isfavorite" style="margin:10px;">
-          <button mat-icon-button color="disabled" (click)="updateFavorite(mxdto)">
-            <mat-icon>favorite</mat-icon>
-          </button>
-        </td>
-
-        <td style="width:100em;">  {{mxdto.filename}}</td>
-
-
-        <td style="width:35em;">
-          <p>{{mxdto.timestamp}}</p>
-        </td>
-
-        <td style="width:35em;">
-          <p>{{mxdto.location}}</p>
-        </td>
-
-
-        <td>
-          <!-- <img id="img{{i}}" src="{{mxdto.url}}" height="200px;" style="visibility: hidden"/>
-            <button id="sh{{i}}" (click)="showhide(mxdto,i)">Show</button> -->
-          <button *ngIf="!mxdto.isvideo" class="btn btn-outline-primary" (click)="open(imagemodal, videomodal, mxdto)">
-            Show
-          </button>
-        </td>
-
-        <td>
-          <button class="btn btn-outline-primary" (click)="rename(mxdto)">Rename</button>
-        </td>
-
-
-        <td>
-          <a class="btn btn-outline-primary" href="{{mxdto.url}}" target="_blank" rel="noopener noreferrer"
-             download="{{mxdto.url}}">Download</a>
-        </td>
-
-        <td>
-          <button class="btn btn-outline-danger" (click)="deleteMediax(mxdto)">Delete</button>
-        </td>
-
-      </div>
-    </tr>
-    </tbody>
-  </table>
-
-
-  <ng-template #imagemodal let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">{{currentmx.filename}}</h4>
-      <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
-    </div>
-    <div class="modal-body">
-      <img width="100%;" [src]="currentmx.url"/>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Alright</button>
-    </div>
-  </ng-template>
-
-  <ng-template #videomodal let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">{{currentmx.filename}}</h4>
-      <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
-    </div>
-    <div class="modal-body">
-      <embed [src]="safeUrl">
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Alright</button>
-    </div>
-  </ng-template>
-
-</div>
