--- a/frontend/website/src/app/components/records/records.component.scss
+++ b/frontend/website/src/app/components/records/records.component.scss
@@ -63,6 +63,7 @@ table.fixed td { overflow: hidden; }
     typing 3.5s steps(40, end),
     blink-caret .75s step-end infinite;
   display:inline-block;
+  margin-left: 400px;
 }
 
 /* The typing effect */
