--- a/frontend/website/src/app/components/home/home.component.html
+++ b/frontend/website/src/app/components/home/home.component.html
@@ -1,51 +1,53 @@
 <h1>Welcome to Big Brother Inc.</h1>
 <div id="main">
-<div class="column" id="body">
+  <div class="column" id="body">
 
-  <h3>Our Mission</h3>
-  <p>
-    Our mission here is to bring you the latest in personal surveillance systems.
-  </p>
-  <p>
-    Our corporation is affiliated with over 100 personal security related companies and firms.
-  </p>
-  <p>
-    Our staff is dedicated to preserving your right to life, liberty, and pursuit of happiness!
-  </p>
-  <br><br>
+    <h3>Our Mission</h3>
+    <p>
+      Our mission here is to bring you the latest in personal surveillance systems.
+    </p>
+    <p>
+      Our corporation is affiliated with over 100 personal security related companies and firms.
+    </p>
+    <p>
+      Our staff is dedicated to preserving your right to life, liberty, and pursuit of happiness!
+    </p>
+    <br><br>
 
-  <h3>Who We Are</h3>
+    <h3>Who We Are</h3>
 
-  <p>
-    A organization that cares about the highest quality of security.
-  </p>
-  <p>
-    A collection of hard-working, diverse individuals.
-  </p>
-  <p>
-    We always deliver the best!
-  </p>
-  <hr>
-  <ul class="list-inline mt-3 mb-0">
-    <a>
-      <mat-icon>location_on</mat-icon>
-      1234 Garage Rd, Basement City, IL 56789</a>
-    <br>
+    <p>
+      A organization that cares about the highest quality of security.
+    </p>
+    <p>
+      A collection of hard-working, diverse individuals.
+    </p>
+    <p>
+      We always deliver the best!
+    </p>
+    <hr>
+    <ul class="list-inline mt-3 mb-0">
+      <a>
+        <mat-icon>location_on</mat-icon>
+        1234 Garage Rd, Basement City, IL 56789</a>
+      <br>
 
-    <a>
-      <mat-icon>language</mat-icon>
-      https://www.big-bro.com</a>
-    <br>
+      <a>
+        <mat-icon>language</mat-icon>
+        https://www.big-bro.com</a>
+      <br>
 
-    <a>
-      <mat-icon>email</mat-icon>
-      big-bro@yahoo.com</a>
-    <br>
+      <a>
+        <mat-icon>email</mat-icon>
+        big-bro@yahoo.com</a>
+      <br>
 
-    <a>
-      <mat-icon>smartphone</mat-icon>
-      (800) big-broo</a>
-    <br>
-  </ul>
+      <a>
+        <mat-icon>smartphone</mat-icon>
+        (800) big-broo</a>
+      <br>
+    </ul>
 
 
+  </div>
+</div>
